--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -239,7 +239,7 @@
           </div>
         </details>
       </header-drawer>
-    {%- endif -%}
+    {%- endif -%}    
 
     {%- if section.settings.logo_position == 'top-center' or section.settings.menu == blank -%}
       <details-modal class="header__search">
@@ -391,6 +391,9 @@
     {%- endif -%}
 
     <div class="header__icons">
+      <a href="{{ block.settings.button_link }}" class="button button--primary">
+        Make a reservation
+      </a>
       <details-modal class="header__search">
         <details>
           <summary class="header__icon header__icon--search header__icon--summary link focus-inset modal__toggle" aria-haspopup="dialog" aria-label="{{ 'general.search.search' | t }}">
