--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -392,7 +392,7 @@
 
     <div class="header__icons">
       <a href="{{ block.settings.button_link }}" class="button button--primary">
-        Make a reservation
+        Book
       </a>
       <details-modal class="header__search">
         <details>
