--- a/sections/main-page.liquid
+++ b/sections/main-page.liquid
@@ -5,6 +5,13 @@
 <noscript>{{ 'component-rte.css' | asset_url | stylesheet_tag }}</noscript>
 
 <div class="page-width page-width--narrow">
+  <div id="bg1">
+    <img src="https://cdn.shopify.com/s/files/1/0263/3800/1005/files/bg-bottle2.png?v=1632925986" alt="" loading="lazy" width="100" height="100">
+  </div>
+  <div id="bg2">
+    <img src="https://cdn.shopify.com/s/files/1/0263/3800/1005/files/bg-bottle1.png?v=1632925986" alt="" loading="lazy" width="100" height="100">
+  </div>
+
   <h1 class="main-page-title page-title h0">
     {{ page.title | escape }}
   </h1>
