--- a/assets/section-main-page.css
+++ b/assets/section-main-page.css
@@ -21,3 +21,52 @@
   width: 52.5rem;
   height: 52.5rem;
 }
+
+@media only screen and (max-width: 750px) {
+  #bg1 {
+    display: none;
+  }
+  #bg2 {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 750px) {
+  #bg2 {
+    position: fixed; 
+    top: 15%; 
+    left: -10%; 
+    width: 40%; 
+    height: 100%;
+    z-index: -1;
+  }
+  #bg2 img {
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    right: 0; 
+    bottom: 0; 
+    margin: auto; 
+    min-width: 50%;
+    min-height: 50%;
+  }
+
+  #bg1 {
+    position: fixed; 
+    top: 15%; 
+    left: 60%; 
+    width: 40%; 
+    height: 100%;
+    z-index: -2;
+  }
+  #bg1 img {
+    position: absolute; 
+    top: 0; 
+    left: 150; 
+    right: 0; 
+    bottom: 0; 
+    margin: auto; 
+    min-width: 50%;
+    min-height: 50%;
+  }
+}
