--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -391,7 +391,7 @@
     {%- endif -%}
 
     <div class="header__icons">
-      <a href="{{ block.settings.button_link }}" class="button button--primary">
+      <a href="/pages/reservations" class="button button--primary">
         Book
       </a>
       <details-modal class="header__search">
@@ -466,22 +466,12 @@
           </div>
         </details>
       </details-modal>
-
-      {%- if shop.customer_accounts_enabled -%}
-        <a href="{%- if customer -%}{{ routes.account_url }}{%- else -%}{{ routes.account_login_url }}{%- endif -%}" class="header__icon header__icon--account link focus-inset{% if section.settings.menu != blank %} small-hide{% endif %}">
-          {% render 'icon-account' %}
-          <span class="visually-hidden">
-            {%- liquid
-              if customer
-                echo 'customer.account_fallback' | t
-              else
-                echo 'customer.log_in' | t
-              endif
-            -%}
-          </span>
-        </a>
-      {%- endif -%}
-
+      
+      <a href="https://www.instagram.com/arlo.somerset/?hl=en" class="header__icon link focus-inset" aria-describedby="a11y-external-message">
+        {%- render 'icon-instagram' -%}
+        <span class="visually-hidden">{{ 'general.social.links.instagram' | t }}</span>
+      </a>
+    
       <a href="{{ routes.cart_url }}" class="header__icon header__icon--cart link focus-inset" id="cart-icon-bubble">
         {%- liquid
           if cart == empty
